SERVER-47959 JournalFlusher will retry oplog reads on WriteConflictExceptions caused by a concurrent {full:true} validate command on the oplog collection