src/mongo/db/repl/storage_interface_impl.h
@@ -145,6 +145,9 @@ public:
     boost::optional<BSONObj> findOplogEntryLessThanOrEqualToTimestamp(
         OperationContext* opCtx, Collection* oplog, const Timestamp& timestamp) override;
 
+    boost::optional<BSONObj> findOplogEntryLessThanOrEqualToTimestampRetryOnWCE(
+        OperationContext* opCtx, Collection* oplog, const Timestamp& timestamp) override;
+
     Timestamp getLatestOplogTimestamp(OperationContext* opCtx) override;
 
     StatusWith<StorageInterface::CollectionSize> getCollectionSize(
